--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npx jest --verbose --runInBand",
     "coverage": "npx jest --coverage --runInBand",
-    "start": "nodemon server.ts"
+    "start": "nodemon src/server.ts"
   },
   "repository": {
     "type": "git",
