--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npx jest --verbose --runInBand",
     "coverage": "npx jest --coverage --runInBand",
-    "start": "nodemon src/server.ts"
+    "start": "node lib/src/server.js",
+    "build": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/mocha": "^9.1.0",
+    "@types/supertest": "^2.0.12",
     "babel-polyfill": "^6.26.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.13",
